--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,6 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
+    app:startDestination="@+id/navigation_home"
     tools:ignore="UnusedNavigation">
 
+
+    <fragment
+        android:id="@+id/navigation_home"
+        android:name="com.example.kotlintext.modules.home.HomeFragment"
+        android:label="@string/title_home"
+        tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/navigation_collect"
+        android:name="com.example.kotlintext.modules.collect.CollectFragment"
+        android:label="@string/title_collect"
+        tools:layout="@layout/fragment_collect" />
+    <fragment
+        android:id="@+id/navigation_personal"
+        android:name="com.example.kotlintext.modules.personal.PersonalFragment"
+        android:label="@string/title_personal"
+        tools:layout="@layout/fragment_personal" />
 </navigation>
